--- a/src/main/webapp/Tweet.xhtml
+++ b/src/main/webapp/Tweet.xhtml
@@ -4,12 +4,15 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:pf="http://primefaces.org/ui">
-<h:head>
-</h:head>
-<h:body>
-	<h:form>
-	<h:outputlabel for="content" value = "Contenu">
-	<h:inputTextArea id="content" value="#tweetCreateBean.content" />	
-	</h:form>
-</h:body>
+	<h:head></h:head>
+	<h:body>
+		<h:form>
+			<h:outputlabel for="content" value="Contenu" />
+			<h:inputTextArea id="content" value="#{tweetCreateBean.content}" />
+			<br />
+			<h:commandButton action="#{ tweetCreateBean.createTweet }"
+				value="Tweeter">
+			</h:commandButton>
+		</h:form>
+	</h:body>
 </html>
