Update Tweet.xhtml et Profil.xhtml

--- a/src/main/webapp/Profil.xhtml
+++ b/src/main/webapp/Profil.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
 	<h4>Test test test</h4>
-	<br/>
-	<!-- <ui:include src="Tweet.xhtml" /> -->
+	<br />
+	<ui:include src="Tweet.xhtml" />
 </h:body>
 </html>
