--- a/src/main/webapp/Tweet.xhtml
+++ b/src/main/webapp/Tweet.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -7,12 +7,12 @@
 	<h:head></h:head>
 	<h:body>
 		<h:form>
-			<h:outputlabel for="content" value="Contenu" />
-			<h:inputTextArea id="content" value="#{tweetCreateBean.content}" />
+			<h:outputLabel for="content" value="Contenu" />
+			<h:inputTextarea id="content" value="#{tweetCreateBean.content}" />
 			<br />
 			<h:commandButton action="#{ tweetCreateBean.createTweet }"
 				value="Tweeter">
 			</h:commandButton>
 		</h:form>
 	</h:body>
-</html>
+</ui:composition>
