--- a/src/main/webapp/Tweet.xhtml
+++ b/src/main/webapp/Tweet.xhtml
@@ -4,15 +4,25 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:pf="http://primefaces.org/ui">
-	<h:head></h:head>
-	<h:body>
-		<h:form>
-			<h:outputlabel for="content" value="Contenu" />
-			<h:inputTextArea id="content" value="#{tweetCreateBean.content}" />
-			<br />
-			<h:commandButton action="#{ tweetCreateBean.createTweet }"
-				value="Tweeter">
-			</h:commandButton>
-		</h:form>
-	</h:body>
+
+
+<h:head></h:head>
+<h:body>
+
+
+
+	<h:form>
+
+		<h:outputlabel for="content" value="Contenu" />
+		<h:inputText id="content" value="#{tweetCreateBean.content}" />
+		<br />
+		<h:commandButton action="#{ tweetCreateBean.createTweet }" value="Tweeter" />
+
+		<h:inputText id="languageID" value="#{tweetCreateBean.content}">
+			<f:validateRequired />
+			<f:validateLongRange minimum="1"></f:validateLongRange>
+		</h:inputText>
+	</h:form>
+
+</h:body>
 </html>
