--- a/src/main/webapp/user.xhtml
+++ b/src/main/webapp/user.xhtml
@@ -48,7 +48,7 @@
 			<br />
 
 		</h:panelGrid>
-		<h:commandButton action="#{userCreateBean.createUser()}"
+		<h:commandButton action="#{userCreateBean.createUser}"
 			value="S'incrire sur tweet" />
 
 	</h:form>
