--- a/src/main/webapp/Profil.xhtml
+++ b/src/main/webapp/Profil.xhtml
@@ -7,16 +7,25 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 <h:head>
 	<title>Profil</title>
+	<link rel="stylesheet" type="text/css" href="Feuilles de style/base.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="Feuilles de style/profil.css" media="screen" />
 </h:head>
 <h:body>
-	<h4>Test test test</h4>
-	<br />
-	<ui:include src="Tweet.xhtml" />
-	<c:forEach items="#{userLoginBean.user.tweets}" var="tweet">
-	<p>
-		#{userLoginBean.user.username} : #{tweet.creationDate} <br />
-		#{tweet.content }
-	</p>
-</c:forEach>
+	<div id="global">
+		<div id="entete"></div>
+		<div id="centre">
+			<div id="navigation">#{userLoginBean.user.username}</div>
+			<div id="principal">
+				<ui:include src="Tweet.xhtml" />
+				<c:forEach items="#{userLoginBean.user.tweets}" var="tweet">
+					<p>
+						#{userLoginBean.user.username} : #{tweet.creationDate} <br />
+						#{tweet.content }
+					</p>
+				</c:forEach>
+			</div>
+			<div id="secondaire">Suggestions</div>
+		</div>
+	</div>
 </h:body>
 </html>
