--- a/src/main/webapp/user.xhtml
+++ b/src/main/webapp/user.xhtml
@@ -41,11 +41,11 @@
 			<br />
 
 
-			<h:outputLabel for="picture" value="Picture" />
-			<h:inputText id="picture" value="#{userCreateBean.picture}" />
-			<h:message for="picture" value="#{userCreateBean.message}" />
-			<br />
-			<br />
+<!-- 			<h:outputLabel for="picture" value="Picture" /> -->
+<!-- 			<h:inputText id="picture" value="#{userCreateBean.picture}" /> -->
+<!-- 			<h:message for="picture" value="#{userCreateBean.message}" /> -->
+<!-- 			<br /> -->
+<!-- 			<br /> -->
 
 		</h:panelGrid>
 		<br />
