--- a/src/main/webapp/Profil.xhtml
+++ b/src/main/webapp/Profil.xhtml
@@ -24,7 +24,7 @@
 					</p>
 				</c:forEach>
 			</div>
-			<div id="secondaire">Suggestions</div>
+			<div id="secondaire"></div>
 		</div>
 	</div>
 </h:body>
