--- a/src/main/webapp/user.xhtml
+++ b/src/main/webapp/user.xhtml
@@ -53,7 +53,7 @@
 		<h:outputText value="#{userCreateBean.message}" />
 		<br />
 		<h:commandButton action="#{userCreateBean.createUser}"
-			value="S'incrire sur tweet" />
+			value="S'inscrire sur tweet" />
 
 	</h:form>
 </h:body>
