--- a/src/main/webapp/user.xhtml
+++ b/src/main/webapp/user.xhtml
@@ -40,8 +40,10 @@
 			<h:message for="email" value="#{userCreateBean.message}" />
 			<br />
 			<br />
-
-
+			
+			<h:outputText for="picture" value="Choisissez votre photo de profil" />
+<!-- 			<input type="file" name="FileName" id="FileName" /> -->
+			<pf:fileUpload allowTypes="/(\.|\/)(gif|jpe?g|png)$/" mode="simple" value="test"/>
 			<!-- 			<h:outputLabel for="picture" value="Picture" /> -->
 			<!-- 			<h:inputText id="picture" value="#{userCreateBean.picture}" /> -->
 			<!-- 			<h:message for="picture" value="#{userCreateBean.message}" /> -->
