--- a/src/main/webapp/Profil.xhtml
+++ b/src/main/webapp/Profil.xhtml
@@ -18,28 +18,36 @@
 </h:head>
 <h:body>
 	<div id="global">
-		<div id="entete"></div>
+		<div id="entete">
+				<h:form id="headerForm">
+					<h:commandButton id="logOutButton" action="#{profilePageBean.disconnect}"
+						value="Déconnexion" />
+				</h:form>
+		</div>
 		<div id="centre">
 			<div id="navigation">#{profilePageBean.userName}</div>
 			<div id="principal">
 
-				<h:form id="tweetform" rendered="#{profilePageBean.userName == sessionBean.user.username}">
-					<h:inputTextarea id="tweetcontent" value="#{profilePageBean.content}"
-						styleClass="text-input">
+				<h:form id="tweetform"
+					rendered="#{profilePageBean.userName == sessionBean.user.username}">
+					<h:inputTextarea id="tweetcontent"
+						value="#{profilePageBean.content}" styleClass="text-input">
 						<f:validateLength minimum="1" maximum="140" />
 					</h:inputTextarea>
 					<br />
 					<h:message for="tweetcontent" />
 					<br />
-					<h:commandButton value="Tweeter" action="#{profilePageBean.createTweet}">
+					<h:commandButton value="Tweeter"
+						action="#{profilePageBean.createTweet}">
 						<!--<f:ajax execute="@form" render="tweets" />-->
 					</h:commandButton>
 				</h:form>
 				<h:panelGroup id="tweets">
 					<c:forEach items="#{profilePageBean.tweets}" var="tweet">
 						<p>
-							<h:link value="#{tweet.author.username}" outcome="Profil.xhtml?username=#{tweet.author.username}"/> : #{tweet.creationDate} <br />
-							#{tweet.content}
+							<h:link value="#{tweet.author.username}"
+								outcome="Profil.xhtml?username=#{tweet.author.username}" />
+							: #{tweet.creationDate} <br /> #{tweet.content}
 						</p>
 					</c:forEach>
 				</h:panelGroup>
