renomage user en inscrip & ajout bouton sur login

--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -18,6 +18,10 @@
 			<h:commandButton action="#{ userLoginBean.logUser }"
 				value="Login">
 			</h:commandButton>
+			<br />
+			<br />
+			<h:outputText value="Pas encore inscrit ? " />
+			<h:button value="Insciption" outcome="Inscription"> </h:button>			
 		</h:form>
 	</h:body>
 </html>
