--- a/src/main/webapp/Profil.xhtml
+++ b/src/main/webapp/Profil.xhtml
@@ -33,8 +33,7 @@
 				<h:form id="tweetform"
 					rendered="#{profilePageBean.userName == sessionBean.user.username}">
 
-					<h:inputTextarea id="tweetcontent"
-						value="#{profilePageBean.content}" styleClass="text-input">
+					<h:inputTextarea id="tweetcontent" value="#{profilePageBean.content}" styleClass="text-input">
 
 						<f:validateLength minimum="1" maximum="140" />
 					</h:inputTextarea>
