--- a/src/main/webapp/Inscription.xhtml
+++ b/src/main/webapp/Inscription.xhtml
@@ -9,7 +9,7 @@
 
 
 	<link rel="stylesheet" type="text/css"
-		href="Feuilles de style/user.css" media="screen" />
+		href="Feuilles de style/Inscription.css" media="screen" />
 		<br />
 	<center>
 		<h1> Nouveau sur Twitter ?</h1>
