Ajout de l'accès à sa page de profil depuis un autre profil

--- a/src/main/webapp/Profil.xhtml
+++ b/src/main/webapp/Profil.xhtml
@@ -29,7 +29,11 @@
 			</h:form>
 		</div>
 		<div id="centre">
-			<div id="navigation">#{profilePageBean.userName}</div>
+			<div id="navigation">
+				Profil de #{profilePageBean.userName} <br/>
+				<h:link value="Accéder à ma page de profil" outcome="Profil.xhtml?username=#{sessionBean.user.username}"
+				rendered="#{profilePageBean.userName != sessionBean.user.username}" />
+				</div>
 			<div id="principal">
 
 				<h:form id="tweetform"
