--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -4,7 +4,10 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:pf="http://primefaces.org/ui">
-	<h:head></h:head>
+	<h:head>
+	<link rel="stylesheet" type="text/css"
+		href="Feuilles de style/base.css" media="all" />
+	</h:head>
 	<h:body>
 		<h:form>
 			<h:outputLabel for="username" value="Nom d'utilisateur : " />
@@ -21,7 +24,8 @@
 			<br />
 			<br />
 			<h:outputText value="Pas encore inscrit ? " />
-			<h:button value="Insciption" outcome="Inscription"> </h:button>			
+			
+			<h:button value="Insciption" outcome="Inscription" class="buttons"> </h:button>			
 		</h:form>
 	</h:body>
 </html>
